pkg/testdata/TestPatchVirtualService/use-cases/match-by-uri/baseVS-with-single-route_uri-match-found/root.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: istio-shipping
  namespace: test-namespace
spec:
  gateways:
    - mesh
  hosts:
    - istio-shipping.test-namespace.svc.cluster.local
    - istio-shipping.test-namespace.svc.mesh.sfdc.net
  http:
    - retries:
        attempts: 5
        retryOn: cancelled,connect-failure,gateway-error,refused-stream,resource-exhausted,unavailable,retriable-status-codes
        retryRemoteLocalities: true
      route:
        - destination:
            host: istio-shipping.test-namespace.svc.cluster.local
            port:
              number: 7442
      timeout: 15s
      match:
        - port: 7442
          uri:
            prefix: /gpt/dev
      name: http-7442
